set up retrofit using dagger-hilt

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,8 @@ android {
         versionCode 1
         versionName "1.0"
 
+        buildConfigField("String","COVID_BASE_URL",COVID_BASE_URL)
+
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
