--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,4 +70,7 @@ dependencies {
 
     // Ticker TextView
     implementation 'com.robinhood.ticker:ticker:2.0.2'
+
+    // Activity KTX for viewModels()
+    implementation "androidx.activity:activity-ktx:1.3.0"
 }
