--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,11 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-android'
+    id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
 }
+apply plugin: 'dagger.hilt.android.plugin'
 
 android {
     compileSdk 31
@@ -53,7 +57,7 @@ dependencies {
 
     // Dagger Hilt
     implementation "com.google.dagger:hilt-android:${rootProject.ext.dagger_hilt_version}"
-    annotationProcessor "com.google.dagger:hilt-android-compiler:${rootProject.ext.dagger_hilt_version}"
+    kapt "com.google.dagger:hilt-android-compiler:${rootProject.ext.dagger_hilt_version}"
 
     // Lifecycle aware components(ViewModel,LiveData etc...)
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:${rootProject.ext.lifecycle_version}"
@@ -72,5 +76,6 @@ dependencies {
     implementation 'com.robinhood.ticker:ticker:2.0.2'
 
     // Activity KTX for viewModels()
-    implementation "androidx.activity:activity-ktx:1.3.0"
+    implementation "androidx.activity:activity-ktx:1.3.1"
+
 }
