--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = '1.5.20'
+    ext.kotlin_version = '1.5.21'
     repositories {
         google()
         mavenCentral()
@@ -31,7 +31,7 @@ task clean(type: Delete) {
 ext {
     retrofit_version = "2.9.0"
     dagger_hilt_version = "2.38.1"
-    lifecycle_version = "2.4.0-alpha03"
+    lifecycle_version = "2.4.0-beta01"
     coroutine_version = "2.3.1"
     http_logger_version = '4.5.0'
 }
